[gd_scene load_steps=2 format=3 uid="uid://opv1ovv245p8"]

[ext_resource type="Script" uid="uid://crvrtgbu2v81e" path="res://src/map/block_map.gd" id="1_yphqy"]

[node name="BlockMap" type="Node2D"]
script = ExtResource("1_yphqy")

[node name="ArtifactLayer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="BlockLayer" type="Node2D" parent="."]
unique_name_in_owner = true
